Implemented new/updated requirements.

--- a/views/custom-templates/periodical-table.html.twig
+++ b/views/custom-templates/periodical-table.html.twig
@@ -14,6 +14,22 @@ This page theme can be selected as custom theme of single "page" type post (due 
                 </div>
             </div>
         {% endblock periodical_table %}
+        {# -------------------------- #}
+        {#            CALC            #}
+        <div class="row molcalc my-3">
+            <div class="col-12">
+                <h3>Kalkulačka</h3>
+            </div>
+            <label class="col-12 my-3">
+                <input name="formula" class="molcalc_formula form-control">
+            </label>
+            <table class="col-12 table table-hover my-3 molcalc_table">
+                <!-- -->
+            </table>
+        </div>
+        {#         CALC END           #}
+        {# -------------------------- #}
+
     </main>
 {% endblock %}
 
