--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -65,6 +65,12 @@
                     {#         CALC END           #}
                     {# -------------------------- #}
                 </div>
+                <!--suppress JSUnresolvedFunction -->
+                <script>
+                  window.addEventListener("load", function(){
+                    initCalcs();
+                  });
+                </script>
             {% endif %}
 
             <div class="tab-pane fade" id="nav-2" role="tabpanel" aria-labelledby="nav-tab-2">
