Implemented new/updated requirements.

--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -64,11 +64,11 @@
                     </div>
                     {#         CALC END           #}
                     {# -------------------------- #}
+                    <!--suppress JSUnresolvedFunction -->
+                    <script defer>
+                      initCalcs();
+                    </script>
                 </div>
-                <!--suppress JSUnresolvedFunction -->
-                <script>
-                  initCalcs();
-                </script>
             {% endif %}
 
             <div class="tab-pane fade" id="nav-2" role="tabpanel" aria-labelledby="nav-tab-2">
