Implemented new/updated requirements.

--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -17,13 +17,13 @@
 
         {% if post.meta('_show_calculator') %}
             <button class="rounded-tab col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 border border-2 border-primary"
-                    id="nav-tab-{{ index }}"
+                    id="nav-tab-1"
                     data-bs-toggle="tab"
-                    data-bs-target="#nav-{{ index }}"
+                    data-bs-target="#nav-1"
                     type="button"
                     role="tab"
-                    aria-controls="nav-{{ index }}"
-                    aria-selected="{{ iter < 1 ? 'true' : 'false' }}">
+                    aria-controls="nav-1"
+                    aria-selected="false">
                 Kalkulačka relativní molekulové hmotnosti
             </button>
         {% endif %}
