Implemented new/updated requirements.

--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -58,9 +58,11 @@
                         <label class="d-block w-100">
                             <input name="formula" class="molcalc_formula form-control">
                         </label>
-                        <table class="d-block w-100 table table-hover my-3 molcalc_table">
-                            <!-- Results are placed here by JS. -->
-                        </table>
+                        <div class="d-block w-100">
+                            <table class="w-100 table table-hover my-3 molcalc_table">
+                                <!-- Results are placed here by JS. -->
+                            </table>
+                        </div>
                     </div>
                 </div>
             {% endif %}
