--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -51,14 +51,14 @@
                 <div class="tab-pane fade w-100" id="nav-1" role="tabpanel" aria-labelledby="nav-tab-1">
                     {# -------------------------- #}
                     {#            CALC            #}
-                    <div class="molcalc w-100 my-3">
-                        <div>
+                    <div class="molcalc w-100">
+                        <div class="my-3">
                             <h3>Kalkulačka molekulární hmotnosti</h3>
                         </div>
-                        <label class="d-block w-100">
+                        <label class="d-block w-100 my-3">
                             <input name="formula" class="molcalc_formula form-control">
                         </label>
-                        <div class="d-block w-100">
+                        <div class="d-block w-100 my-3">
                             <table class="w-100 table table-hover my-3 molcalc_table">
                                 <!-- Results are placed here by JS. -->
                             </table>
