--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -17,7 +17,7 @@
         </nav>
     </div>
     <form action="/" method="get" class="row collapse  {{ search|default ? 'show' : '' }}" id="searchCollapse">
-        <div class="col-12 input-group my-2 px-0">
+        <div class="col-12 input-group my-2">
             <label for="search-input" class="btn btn-outline-primary" id="basic-addon1">🔎</label>
             <input type="search"
                    value="{{ search|default }}"
