Implemented new/updated requirements.

--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -11,7 +11,7 @@
 
     {% include 'navigations/sub-tabs/sub-tabs.html.twig' %}
 
-    <div class="row mt-0 px-2">
+    <div class="row mt-0">
         {% for material in materials %}
             {% include 'post-previews/_photo_preview_vertical.twig' with {post: material} %}
         {% endfor %}
