--- a/views/post-previews/_video_preview_horizontal.html.twig
+++ b/views/post-previews/_video_preview_horizontal.html.twig
@@ -1,4 +1,4 @@
-<article class="row my-5 py-3 bg-dark bg-opacity-10">
+<article class="row mx-0 my-5 py-3 bg-dark bg-opacity-10">
     <div class="col-12 col-md-8 col-lg-7 d-flex align-items-start flex-column">
         <a href="{{ material.link }}" class="text-dark text-decoration-none">
             <h3>{{ material.title }}</h3>
