--- a/views/custom-templates/teach_material_cat_vernier.html.twig
+++ b/views/custom-templates/teach_material_cat_vernier.html.twig
@@ -2,6 +2,7 @@
 
 {% block article_header %}
     {% set thumbnail = get_image(post.tabThumbnail(subtype)).src %}
+    <!-- IMG: '{{ thumbnail }}' -->
     {% include 'layout/main-banner.html.twig'
         with {image: thumbnail ? thumbnail : (post ? post.thumbnail : null), title: title|default(post.title)} %}
 {% endblock article_header %}
