--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -68,9 +68,9 @@
                     <div class="swiper-container">
                         <div class="swiper-wrapper p-4">
                             {% for index, equation in equations %}
-                                <div class="swiper-slide p-5">
+                                <div class="swiper-slide p-5" data-level="{{ equation.meta('_level') }}">
                                     <div class="my-1">
-                                        {{ equation.assignment|apply_filters('the_content') }}
+                                        {{ equation.content|apply_filters('the_content') }}
                                         <p class="my-5">
                                             <a class="btn btn-primary"
                                                data-bs-toggle="collapse"
@@ -83,7 +83,7 @@
                                         </p>
                                     </div>
                                     <div class="my-1 collapse" id="solution{{ index }}">
-                                        {{ equation.solution|apply_filters('the_content') }}
+                                        {{ equation.meta('_solution')|apply_filters('the_content') }}
                                     </div>
                                 </div>
                             {% endfor %}
