Implemented new/updated requirements.

--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -4,6 +4,7 @@ $rfs-base-value: 0.8rem;
 @import "bootstrap-up";
 @import "interactive-periodical-table";
 @import "~swiper/swiper-bundle.min.css";
+@import "tom-select/dist/scss/tom-select.bootstrap5";
 
 html {
   overflow-x: hidden;
