--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -31,23 +31,27 @@
                     {% endif %}
 
                     <form class="row">
-                        <label class="col-12 mt-3" for="categories">
-                            <strong>Obsah zadání</strong>
-                        </label>
-                        <select id="categories" class="col-12 mb-2" multiple placeholder="" name="categories">
-                            <optgroup label="TV Shows">
-                                <option value="Blue Bloods" data-date="2010-2021">Blue Bloods (2010-2021)</option>
-                                <option value="Magnum P.I." data-date="1980-1988" selected>Magnum P.I. (1980-1988)</option>
-                            </optgroup>
-                            <optgroup label="Movies">
-                                <option value="An Innocent Man" data-date="1989">An Innocent Man (1989)</option>
-                                <option value="In & Out" data-date="1997">In & Out (1997)</option>
-                                <option value="Lassiter" data-date="1984">Lassiter (1984)</option>
-                                <option value="Mr. Baseball" data-date="1992">Mr. Baseball (1992)</option>
-                                <option value="Quigley Down Under" data-date="1990">Quigley Down Under (1990)</option>
-                                <option value="Three Men and a Baby" data-date="1987">Three Men and a Baby (1987)</option>
-                            </optgroup>
-                        </select>
+
+                        <div class="form-group col-12 col-md-6">
+                            <label for="categories">
+                                <strong>Obsah zadání</strong>
+                                <select id="categories" class="form-control" multiple placeholder="" name="categories">
+                                    <optgroup label="TV Shows">
+                                        <option value="Blue Bloods" data-date="2010-2021">Blue Bloods (2010-2021)</option>
+                                        <option value="Magnum P.I." data-date="1980-1988" selected>Magnum P.I. (1980-1988)</option>
+                                    </optgroup>
+                                    <optgroup label="Movies">
+                                        <option value="An Innocent Man" data-date="1989">An Innocent Man (1989)</option>
+                                        <option value="In & Out" data-date="1997">In & Out (1997)</option>
+                                        <option value="Lassiter" data-date="1984">Lassiter (1984)</option>
+                                        <option value="Mr. Baseball" data-date="1992">Mr. Baseball (1992)</option>
+                                        <option value="Quigley Down Under" data-date="1990">Quigley Down Under (1990)</option>
+                                        <option value="Three Men and a Baby" data-date="1987">Three Men and a Baby (1987)</option>
+                                    </optgroup>
+                                </select>
+                            </label>
+                        </div>
+
 
                         <div class="form-group col-12 col-md-6">
                             <label>
