Implemented new/updated requirements.

--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -32,10 +32,10 @@
 
                     <form class="row">
 
-                        <div class="form-group col-12 col-md-6">
+                        <div class="form-group col-12">
                             <label for="categories">
                                 <strong>Obsah zadání</strong>
-                                <select id="categories" class="form-control" multiple placeholder="" name="categories">
+                                <select id="categories" class="form-control w-100" multiple placeholder="" name="categories">
                                     <optgroup label="TV Shows">
                                         <option value="Blue Bloods" data-date="2010-2021">Blue Bloods (2010-2021)</option>
                                         <option value="Magnum P.I." data-date="1980-1988" selected>Magnum P.I. (1980-1988)</option>
@@ -55,15 +55,15 @@
 
                         <div class="form-group col-12 col-md-6">
                             <label>
-                                <strong class="d-block">Počet příkladů</strong>
-                                <input class="d-block form-control" type="number" name="count" min="1" max="20">
+                                <strong class="d-block w-100">Počet příkladů</strong>
+                                <input class="d-block w-100 form-control" type="number" name="count" min="1" max="20">
                             </label>
                         </div>
 
                         <div class="form-group col-12 col-md-6">
                             <label for="level">
-                                <span class="d-block">Obtížnost</span>
-                                <select id="level" class="d-block form-control" name="level">
+                                <span class="d-block w-100">Obtížnost</span>
+                                <select id="level" class="d-block w-100 form-control" name="level">
                                     <option value="1">Lehká</option>
                                     <option value="3">Středně těžká</option>
                                     <option value="5">Těžká</option>
