Implemented new/updated requirements.

--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -33,7 +33,7 @@
                     <form class="row">
 
                         <div class="form-group col-12">
-                            <label for="categories">
+                            <label for="categories" class="w-100">
                                 <strong>Obsah zadání</strong>
                                 <select id="categories" class="form-control w-100" multiple placeholder="" name="categories">
                                     <optgroup label="TV Shows">
@@ -54,14 +54,14 @@
 
 
                         <div class="form-group col-12 col-md-6">
-                            <label>
+                            <label class="w-100" for="count">
                                 <strong class="d-block w-100">Počet příkladů</strong>
-                                <input class="d-block w-100 form-control" type="number" name="count" min="1" max="20">
+                                <input class="d-block w-100 form-control" type="number" id="count" name="count" min="1" max="20">
                             </label>
                         </div>
 
                         <div class="form-group col-12 col-md-6">
-                            <label for="level">
+                            <label for="level" class="w-100">
                                 <span class="d-block w-100">Obtížnost</span>
                                 <select id="level" class="d-block w-100 form-control" name="level">
                                     <option value="1">Lehká</option>
