--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -20,7 +20,7 @@
 
             <div class="tab-pane fade show active" id="nav-0" role="tabpanel" aria-labelledby="nav-tab-0">
 
-                <div class="w-100 m-0 container-fluid">
+                <div class="w-100 m-0 container-fluid p-0">
 
                     {% if post.content|default %}
                     <div class="row">
