--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -32,7 +32,7 @@
 
                     <form class="row">
 
-                        <div class="form-group col-12">
+                        <div class="form-group col-12 my-3">
                             <label for="categories" class="w-100">
                                 <strong>Obsah zadání</strong>
                                 <select id="categories" class="form-control w-100" multiple placeholder="" name="categories">
@@ -53,16 +53,16 @@
                         </div>
 
 
-                        <div class="form-group col-12 col-md-6">
+                        <div class="form-group col-12 col-md-6 my-3">
                             <label class="w-100" for="count">
                                 <strong class="d-block w-100">Počet příkladů</strong>
                                 <input class="d-block w-100 form-control" type="number" id="count" name="count" min="1" max="20">
                             </label>
                         </div>
 
-                        <div class="form-group col-12 col-md-6">
+                        <div class="form-group col-12 col-md-6 my-3">
                             <label for="level" class="w-100">
-                                <span class="d-block w-100">Obtížnost</span>
+                                <span class="d-block w-100"><strong>Obtížnost</strong></span>
                                 <select id="level" class="d-block w-100 form-control" name="level">
                                     <option value="1">Lehká</option>
                                     <option value="3">Středně těžká</option>
