Implemented new/updated requirements.

--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -63,7 +63,7 @@
                         <div class="form-group col-12 col-md-6 my-3">
                             <label for="level" class="w-100">
                                 <span class="d-block w-100"><strong>Obtížnost</strong></span>
-                                <select id="level" class="d-block w-100 form-control" name="level">
+                                <select id="level" class="d-block w-100 form-select" name="level">
                                     <option value="1">Lehká</option>
                                     <option value="3">Středně těžká</option>
                                     <option value="5">Těžká</option>
