Implemented new/updated requirements.

--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -70,6 +70,10 @@
                             </label>
                         </div>
 
+                        <div class="btn-group col-12 my-3" role="group" aria-label="GENEROVAT TEST">
+                            <button type="button" class="btn btn-outline-primary">GENEROVAT TEST</button>
+                        </div>
+
                     </form>
 
 
