Implemented new/updated requirements.

--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -71,7 +71,9 @@
                         </div>
 
                         <div class="btn-group col-12 my-3" role="group" aria-label="GENEROVAT TEST">
-                            <button type="button" class="btn btn-outline-primary">GENEROVAT TEST</button>
+                            <button type="button" class="btn btn-outline-primary">
+                                <strong>GENEROVAT TEST</strong>
+                            </button>
                         </div>
 
                     </form>
