--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -48,7 +48,8 @@
                                 <span class="d-block w-100"><strong>Počet příkladů</strong></span>
                                 <select id="level" class="d-block w-100 form-select" name="count">
                                     {% for i in range(1, 20) %}
-                                    <option value="{{ i }}">{{ i }}</option>
+                                        <option value="{{ i }}">{{ i }}</option>
+                                    {% endfor %}
                                 </select>
                             </label>
                         </div>
