--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -46,7 +46,7 @@
                         <div class="form-group col-12 col-md-6 my-3">
                             <label for="count" class="w-100">
                                 <span class="d-block w-100"><strong>Počet příkladů</strong></span>
-                                <select id="level" class="d-block w-100 form-select" name="count">
+                                <select id="count" class="d-block w-100 form-select" name="count">
                                     {% for i in range(1, 20) %}
                                         <option value="{{ i }}">{{ i }}</option>
                                     {% endfor %}
