Implemented new/updated requirements.

--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -48,7 +48,9 @@
                                 <span class="d-block w-100"><strong>Počet příkladů</strong></span>
                                 <select id="count" class="d-block w-100 form-select" name="count">
                                     {% for i in range(1, 20) %}
-                                        <option value="{{ i }}">{{ i }}</option>
+                                        <option value="{{ i }}" {{ count == i ? 'selected=selected' : '' }}>
+                                            {{ i }}
+                                        </option>
                                     {% endfor %}
                                 </select>
                             </label>
@@ -58,9 +60,11 @@
                             <label for="level" class="w-100">
                                 <span class="d-block w-100"><strong>Obtížnost</strong></span>
                                 <select id="level" class="d-block w-100 form-select" name="level">
-                                    <option value="1">Lehká</option>
-                                    <option value="3">Středně těžká</option>
-                                    <option value="5">Těžká</option>
+                                    {% for level in levels %}
+                                        <option value="{{ level.level }}" {{ level.level == level ? 'selected=selected' : '' }}>
+                                            {{ level.name }}
+                                        </option>
+                                    {% endfor %}
                                 </select>
                             </label>
                         </div>
@@ -72,7 +76,6 @@
                         </div>
 
                     </form>
-
 
                 </div>
 
