Implemented new/updated requirements.

--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -64,7 +64,7 @@
                                 <span class="d-block w-100"><strong>Obtížnost</strong></span>
                                 <select id="level" class="d-block w-100 form-select" name="level">
                                     {% for level in allLevels %}
-                                        <option value="{{ level.level }}" {{ level.level == level ? 'selected=selected' : '' }}>
+                                        <option value="{{ level.level }}" {{ ''~level.level == ''~level ? 'selected=selected' : '' }}>
                                             {{ level.name }}
                                         </option>
                                     {% endfor %}
