--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -87,7 +87,7 @@
 
                     <div class="row">
                         <h3>Test:</h3>
-                        <ul>
+                        <ul class="ms-3">
                             <li>Level: {{ level }}</li>
                             <li>Počet: {{ count }}</li>
                             <li>
@@ -108,8 +108,8 @@
                 <div class="w-100 m-0 container-fluid p-0">
 
                     <div class="row">
-                        <h3>Test:</h3>
-                        <ol class="ms-3">
+                        <h3>Zadání testu</h3>
+                        <ol class="ms-4">
                             {% for equation in equations %}
                                 <li>
                                     {{ equation.content }}
@@ -120,7 +120,15 @@
 
                     <div class="row">
                         <h3>Řešení</h3>
-                        <ol class="ms-3">
+                        <a class="text-primary fw-bolder"
+                           data-bs-toggle="collapse"
+                           href="#solutionsCollapse"
+                           role="button"
+                           aria-expanded="false"
+                           aria-controls="solutionsCollapse">
+                            Zobrazit/skrýt řešení
+                        </a>
+                        <ol class="ms-4 collapse" id="solutionsCollapse">
                             {% for equation in equations %}
                                 <li>
                                     {{ equation.meta('_solution') }}
@@ -128,7 +136,6 @@
                             {% endfor %}
                         </ol>
                     </div>
-
 
                 </div>
 
