Implemented new/updated requirements.

--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -131,7 +131,7 @@
                         <ol class="ms-4 collapse" id="solutionsCollapse">
                             {% for equation in equations %}
                                 <li>
-                                    {{ equation.meta('_solution') }}
+                                    {{ equation.meta('_solution')|apply_filters('the_content') }}
                                 </li>
                             {% endfor %}
                         </ol>
