Implemented new/updated requirements.

--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -120,7 +120,7 @@
 
                     <div class="row">
                         <h3>Řešení</h3>
-                        <a class="text-primary fw-bolder"
+                        <a class="mb-1 text-primary fw-bolder"
                            data-bs-toggle="collapse"
                            href="#solutionsCollapse"
                            role="button"
