Implemented new/updated requirements.

--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -82,29 +82,6 @@
 
                 </div>
 
-
-                <div class="w-100 m-0 container-fluid p-0">
-
-                    <div class="row">
-                        <h3>Test:</h3>
-                        <ul class="ms-3">
-                            <li>Level: {{ level }}</li>
-                            <li>Počet: {{ count }}</li>
-                            <li>
-                                Kategorie:
-                                <ul>
-                                    {% for category in categories %}
-                                        <li>{{ category }}</li>
-                                    {% endfor %}
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-
-
-                </div>
-
-
                 <div class="w-100 m-0 container-fluid p-0">
 
                     <div class="row">
@@ -119,7 +96,7 @@
                     </div>
 
                     <div class="row">
-                        <h3>Řešení</h3>
+                        <h3>Řešení testu</h3>
                         <a class="mb-3 text-primary fw-bolder"
                            data-bs-toggle="collapse"
                            href="#solutionsCollapse"
