--- a/views/custom-templates/nomenclature-test.html.twig
+++ b/views/custom-templates/nomenclature-test.html.twig
@@ -82,7 +82,7 @@
 
                 </div>
 
-                <div class="w-100 m-0 container-fluid p-0">
+                <div class="w-100 m-0 mt-3 container-fluid p-0">
 
                     <div class="row">
                         <h3>Zadání testu</h3>
