--- a/views/single-customs/single-chemical_element.html.twig
+++ b/views/single-customs/single-chemical_element.html.twig
@@ -17,7 +17,7 @@
     {% set tabs = [
         {key: 'history', name: 'Historie'},
         {key: 'physico_chemical_properties', name: 'Fyzikálně chemické vlastnosti'},
-        {key: 'chemical_properties', name: 'Chemické vlastosti'},
+        {key: 'chemical_properties', name: 'Chemické vlastnosti'},
         {key: 'compounds', name: 'Sloučeniny'},
         {key: 'preparation_and_production', name: 'Příprava a výroba'},
         {key: 'utilization', name: 'Využití'},
