--- a/views/single-customs/single-nomenclature.html.twig
+++ b/views/single-customs/single-nomenclature.html.twig
@@ -50,9 +50,14 @@
             {% if post.meta('_show_calculator') %}
                 <div class="tab-pane fade w-100" id="nav-1" role="tabpanel" aria-labelledby="nav-tab-1">
                     <div class="molcalc w-100">
-                        <label class="d-block w-100 my-4">
-                            <input name="formula" class="molcalc_formula form-control">
-                        </label>
+                        <div class="w-100 input-group">
+                            <label class="my-4">
+                                <input name="formula" class="molcalc_formula form-control">
+                            </label>
+                            <button class="btn btn-outline-primary" type="submit">
+                                OK
+                            </button>
+                        </div>
                         <div class="d-block w-100 my-4">
                             <table class="w-100 table table-hover my-3 molcalc_table">
                                 <!-- Results are placed here by JS. -->
