--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -49,7 +49,7 @@
 
             {% if post.meta('_show_calculator') %}
                 <div class="tab-pane fade w-100" id="nav-1" role="tabpanel" aria-labelledby="nav-tab-1">
-                    <div class="molcalc w-100">
+                    <div class="molcalc w-100 my-3">
                         <label class="d-none" for="formula"></label>
                         <div class="w-100 input-group">
                             <input name="formula" id="formula" class="molcalc_formula form-control">
