Implemented new/updated requirements.

--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -58,6 +58,11 @@
                         <div class="d-block w-100 my-4">
                             <table class="w-100 table table-hover my-3 molcalc_table">
                                 <!-- Results are placed here by JS. -->
+                                <tr>
+                                    <td>
+                                        Zadejte chemický vzorec do formuláře a kalkulačka zde zobrazí vypočtenou molární hmotnost.
+                                    </td>
+                                </tr>
                             </table>
                         </div>
                     </div>
