--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -59,7 +59,7 @@
                             <table class="w-100 table table-hover my-3 molcalc_table">
                                 <!-- Results are placed here by JS. -->
                                 <tr>
-                                    <td>
+                                    <td class="border-0">
                                         Zadejte chemický vzorec do formuláře a kalkulačka zde zobrazí vypočtenou molární hmotnost.
                                     </td>
                                 </tr>
