Implemented new/updated requirements.

--- a/views/navigations/sub-tabs/sub-tabs.html.twig
+++ b/views/navigations/sub-tabs/sub-tabs.html.twig
@@ -1,5 +1,5 @@
 {% if subtypes|length > 1 %}
-    <div class="row px-2 my-3" style="line-height: 1.1;">
+    <div class="row px-2 my-3 mb-5" style="line-height: 1.1;">
         {% for oneSubType in subtypes %}
             {% set classes_common = "d-flex col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 text-center align-items-center justify-content-center" %}
             {% set classes_border = "border border-2 border-primary" %}
