Implemented new/updated requirements.

--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -2,7 +2,7 @@
 
 {% block article_content %}
 
-    <nav class="nav row my-3 p-0 rounded-tabs" id="nav-tab">
+    <nav class="nav row my-3 mb-5 p-0 rounded-tabs" id="nav-tab">
 
         <button class="rounded-tab col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 border border-2 border-primary active"
                 id="nav-tab-0"
