--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -15,6 +15,7 @@ p {
 }
 
 figcaption {
+  font-size: small;
   text-align: center;
 }
 
@@ -25,6 +26,8 @@ a {
     font-weight: bold;
   }
 }
+
+
 
 .hover-bold {
   a {
