--- a/views/post-previews/_post_preview_horizontal_search.html.twig
+++ b/views/post-previews/_post_preview_horizontal_search.html.twig
@@ -14,6 +14,11 @@
                 </a>
             {% endif %}
         </a>
+        {% if post.parent %}
+            <div class="text-muted small">
+                <p>{{ post.parent.title }}</p>
+            </div>
+        {% endif %}
         <div style="text-align: justify;">
             {{ post.post_excerpt }}
         </div>
